# flying-state-machines

./: .gitignore  AGENTS.md  changelog.md  codestyle.md  dox.md  license  pyproject.toml  readme.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  release_checklist.md
flying_state_machines/: SKILL.md  __init__.py  asynclasses.py  classes.py  cli.py  errors.py  version.py
pyfsm/: classes.py
scripts/: linechecker.py
tests/: context.py  test_asynclasses.py  test_classes.py
