[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flying-state-machines"
version = "0.3.1-dev"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = "The only Finite State Machine library with a Flying Spaghetti Monster serialization format"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Religion",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "packify >= 0.3.3",
]

[project.urls]
"Homepage" = "https://pycelium.com"
"Repository" = "https://github.com/k98kurz/flying-state-machines"
"Bug Tracker" = "https://github.com/k98kurz/flying-state-machines/issues"

[tool.hatch.build.targets.wheel]
exclude = [
  "/tests",
  ".github",
  ".opencode",
  "AGENTS.md",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  ".github",
  ".opencode",
  "AGENTS.md",
]
